Changelog
=========

7.1-dev0 - (unreleased)
---------------------

7.0 - (2019-05-02)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for EEA Templates Service
  [avoinea refs #102916]
* Feature: Template v3
  [avoinea refs #102916]

6.5 - (2019-01-28)
---------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]

6.4 - (2018-08-17)
---------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]
* Change: updated patches
  [alecghica refs #97573]

6.3 - (2018-05-24)
-----------------------
* Change: replaced the old invalidate cache method footer.
  [alecghica refs #95020]

6.2 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]
* Change: eea_header.pt merged from /custom
  [alecghica refs #89967]

6.1 - (2017-11-07)
------------------
* Feature: added cssonly option to getRequiredHead?cssonly=true
  which if passed will only output the css for the eea header since we should
  have the ability to output css in a different position from the js
  [ichim-david refs #88482]
* Feature: added jsonly option to getRequiredHead?jsonly=true
  which if passed will only output the js for the eea header since we should
  have the ability to output js in a different position from the css
  [ichim-david refs #88482]
* Feature: added js_libs list property to template_service portal_properties which
  if added will override the js resources that will be concatenated when calling
  external_templates_scripts.js browserView
  [ichim-david refs #88482]

6.0 - (2017-05-22)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

5.9 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

5.8 - (2017-03-27)
------------------
* Bugfix: Add the EEA Google Analytics as a required js so that it is on all elastic apps.