@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>7.0</version>
+  <version>7.1</version>
 </metadata>
