@@ -9,9 +9,14 @@
                           view nocall:view | nocall: plone_view;">
         <tal:notajax tal:condition="python:not ajax_load or ajax_include_head">
             <tal:resourceregistries>
-                <tal:js tal:condition="python: not request.get('jsonly')">
+                <tal:css tal:condition="python: not request.get('jsonly') and not request.get('cssonly') == 'external_templates'">
                     <tal:styles replace="structure provider:plone.resourceregistries.styles" />
-                </tal:js>
+                </tal:css>
+
+                <tal:block tal:condition="python:request.get('cssonly') == 'external_templates'">
+                    <link rel="stylesheet" tal:attributes="src string:${portal_url}/external_templates_styles.css" />
+                </tal:block>
+
                 <tal:onlycss tal:condition="python: not request.get('cssonly')">
                     <tal:nojs tal:condition="python: not request.get('jsdisable')">
                         <tal:styles replace="structure provider:plone.resourceregistries.kineticstylesheets" />
