@@ -4,6 +4,17 @@
   i18n_domain="eea">
 
   <genericsetup:upgradeSteps
+    source="7.0"
+    destination="7.1"
+    profile="Products.EEATemplatesService:default">
+
+    <genericsetup:upgradeDepends
+      title="Import steps with changes: propertiestool"
+      import_steps="propertiestool"
+    />
+
+  </genericsetup:upgradeSteps>
+  <genericsetup:upgradeSteps
     source="4.0"
     destination="7.0"
     profile="Products.EEATemplatesService:default">
