@@ -3,6 +3,14 @@ Changelog
 
 7.1-dev0 - (unreleased)
 ---------------------
+* Upgrade step: Within "Plone > Site setup > Add-ons" click on
+  upgrade button available for EEA Templates Service
+  [ichim-david refs #105453]
+* Feature: added external_templates_styles.css browser
+  view which can be used to register css that can be
+  packed into a single css file
+  [ichim-david refs #105453]
+
 
 7.0 - (2019-05-02)
 ------------------
